--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github:
   username: yongjun042             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: pyj24            # change to your twitter username
 
 social:
   name: 박용준(Park Yongun)                  # it will shows as the copyright owner in Footer
@@ -48,7 +48,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 # --------------------------
 
 google_analytics:
-  id: ''          # Fill with your Google Analytics ID
+  id: 'G-EV2FR4BDE6'          # Fill with your Google Analytics ID
   pv:
     # The Google Analytics pageviews switch.
     # DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
